--- a/glide.yaml
+++ b/glide.yaml
@@ -6,6 +6,8 @@ import:
   - orm
 - package: github.com/go-sql-driver/mysql
   version: ^1.3.0
+- package: github.com/joho/godotenv
+  version: v1.1
 testImport:
 - package: github.com/smartystreets/goconvey
   version: 1.6.2
